# trino-mcp

./: .env.example  .gitignore  CONTRIBUTING_TO_DOCS.md  GITHUB_PAGES_SETUP.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_PYPI.md  mkdocs.yml  pyproject.toml  pytest.ini  validate.py
.github/chatmodes/: thinkingBeastMode.chatmode.md
.github/workflows/: ci.yml  docs.yml  publish-to-pypi.yml
docs/: api.md  api.rst  authentication.md  authentication.rst  conf.py  configuration.md  configuration.rst  contributing.md  contributing.rst  dev.md  examples.md  examples.rst  index.md  index.rst  installation.md  installation.rst  license.md  license.rst  quickstart.md  quickstart.rst  tools.md  tools.rst
examples/: basic_usage.py  test_async_query_cancel.py
scripts/: README.md  generate_tool_docs.py
src/trino_mcp/: __init__.py  __main__.py  client.py  config.py  server.py  utils.py
tests/: __init__.py  test_client.py  test_config.py  test_generate_docs.py  test_server.py  test_utils.py
