[project]
name = "trino-mcp"
version = "0.1.1"
description = "A simple Model Context Protocol (MCP) server for Trino with OAuth support"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "trino", "model-context-protocol", "llm", "ai"]
authors = [
    { name = "Trino MCP Contributors" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.6.0",
    "trino>=0.333.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/weijie-tan3/trino-mcp"
Repository = "https://github.com/weijie-tan3/trino-mcp"
Issues = "https://github.com/weijie-tan3/trino-mcp/issues"
Documentation = "https://github.com/weijie-tan3/trino-mcp#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
trino-mcp = "trino_mcp.server:main"
